# $Id$
2008-03-12 Benoit Grégoire  <bock@step.polymtl.ca>
    * Major performance improvement in content manager for content groups picking items with limits on how many times they can be displayed.
	* Improve performance of Content::getLastDisplayedTimestamp(), will mostly show when using the RSS aggregator, especially when postgres has little memory
	
2008-03-06 Benoit Grégoire  <bock@step.polymtl.ca>
    * Fix #438.  Not Node::getNumOnlineUsers() will count every users connected (once for every account), except the splash-only user + every mac adresses connecting as the splash-only user.
	* Network::getNumOnlineUsers() use the same counting method
	* Network.php:  Reformat variables names according to coding standards.
	
2008-03-02 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #431: Don't even display the Signup button if none of the networks allow signing up.  Allow Authenticators to define the signup URL themselves.

2008-02-27 Damien Raude-Morvan <drazzib@drazzib.com>
    * Update french translation

2008-02-12 Max Horváth  <max.horvath@freenet.de>
    * Fixed issue in install.php when POSIX is unavailable to PHP
    * Fixed package name of Cache_Lite in Dependency class
    * Updated mail address of Max Horváth

2008-01-16 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #42 (Node cannot be renamed)

2008-01-16 Benoit Grégoire  <bock@step.polymtl.ca>
	* Temporary patch for problem introduced in [1319]:  the menu did not display where main_area_top is empty (which is actually most places in the admin interface).  This shouldn't have been done in the first place, as it doesn't fix the problem the menu cause of theming, and worse causes people to edit MainUI_Display.tpl, causing such errors.  A network config option should have been provided to allow selecting in what area the menu goes.

2008-01-13 Benoit Grégoire  <bock@step.polymtl.ca>